[package]
name = "test_case"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.8.1"

[dependencies-dev]
solana-program-test = "1.8.1"
solana-sdk = "1.8.1"